working tableview cell test

--- a/Pytt/en.lproj/Localizable.strings
+++ b/Pytt/en.lproj/Localizable.strings
@@ -7,4 +7,6 @@
 */
 
 
-"RecipeListViewControllerTitle" = "Search recipes";
+//"RecipeListViewControllerTitle" = "Search recipes";
+
+"RecipeListViewControllerTitle" = "Search recipes too long string";
